# container-forge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  apt-build.txt  apt-runtime.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml
scripts/: container-smoke-test.sh  run-docker-smoke-test.sh  test-contract.sh  validate-contract.sh
