[project]
name = "omezarr-omexml-metadatalinking"
version = "0.0.0"
description = "Links OME-XML to OME-Zarr metadata for use in OME-Zarr pipelines For Huch lab."
requires-python = ">=3.12,<3.13"
dependencies = [
    "tifffile>=2026.7.14",
    "polars>=1.42.1",
    "ome-types>=0.6.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "prek>=0.3.9,<0.4",
]
