[project]
name = "cv7000-post-processing"
version = "0.0.0"
description = "Coontainer for post processing of nuclear cv700 data."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.4.6",
    "ome-zarr>=0.18.0",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "scikit-image>=0.26.0",
    "scipy>=1.18.0",
    "zarr>=3.2.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "prek>=0.3.9,<0.4",
]
