[project]
name = "cellpose_nuclei_segmentation"
version = "0.0.0"
description = "Cellpose nuclei segmentation nextflow container."
requires-python = ">=3.12,<3.13"
dependencies = [
    "cellpose>=4.2.1.1",
    "numpy>=2.4.6",
    "ome-zarr>=0.18.0",
    "zarr>=3.2.1",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "scikit-image>=0.26.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "prek>=0.3.9,<0.4",
]
